fix gap between playground-cards and add services section

--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ section{
     padding-bottom: 12em;
 }
 
+img{
+    display: block;
+}
+
 /* *********************************general********************************* */
 /* *********************************typography********************************* */
 .hero-text{
@@ -143,13 +147,48 @@ header a{
 
 .playground-cards-container{
     flex-wrap: wrap;
-    border: 4px solid red;
-    
+    gap: .5em;    
 }
 
 .playground-card{
-    width: 50%;
+    width: 49%;
+}
+
+.playground-card img{
+    width: 100%;
+    border-radius: .5em;
 }
 
 
 /* *********************************playground********************************* */
+/* *********************************services********************************* */
+.services-container{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    font-size: 8rem;
+    font-weight: 1000;
+    letter-spacing: -.03em;
+    line-height: .8em;
+    text-align: center;
+    margin: 1em 0;
+}
+
+.services-link-container{
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    align-items: center;
+    padding: 1em;
+}
+
+.services-link-container a{
+    text-decoration: none;
+}
+
+.services-link-container i{
+    margin-bottom: 5px;
+}
+
+
+
